--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ h2 {
   cursor: pointer;
   position: absolute;
   top: 10px;
-  right: 14%;
+  right: 1%;
   font-size: 18px;
   background: transparent;
   border: none;
@@ -206,8 +206,8 @@ h2 {
 
 .feedback-options {
   position: absolute;
-  top: 0%;
-  right: 5%;
+  top: 10px;
+  right: 2.5%;
   background-color: #ffffff;
   border: 1px solid #ccc;
   border-radius: 5px;
